# RL-Rust

./: .gitignore  Cargo.toml  README.md  asd.txt  chart.ipynb
crates/environments/: Cargo.toml
crates/environments/src/: classic_control.rs  env.rs  lib.rs  space.rs  toy_text.rs  utils.rs
crates/environments/src/classic_control/: acrobot.rs  cart_pole.rs  mountain_car.rs  pendulum.rs
crates/environments/src/toy_text/: blackjack.rs  cliff_walking.rs  frozen_lake.rs  frozen_lake_partial.rs  taxi.rs
crates/python_bindings/: Cargo.toml  pyproject.toml
crates/python_bindings/.env/: pyvenv.cfg
crates/python_bindings/src/: agent.rs  env.rs  lib.rs  test.py
crates/reinforcement_learning/: Cargo.toml
crates/reinforcement_learning/src/: action_selection.rs  agent.rs  experience_buffer.rs  lib.rs  model.rs  network.rs  policy.rs  trainer.rs  utils.rs
crates/reinforcement_learning/src/action_selection/: adaptative_epsilon.rs  epsilon_decreasing.rs  epsilon_greedy.rs  uniform_epsilon_greed.rs  upper_confidence_bound.rs
crates/reinforcement_learning/src/agent/: double_deep_agent.rs  elegibility_traces_agent.rs  internal_model_agent.rs  old_elegibility_traces_agent.rs  one_step_agent.rs  one_step_epsilon_greed_qlearning.rs  one_step_epsilon_greed_sarsa.rs  one_step_qlearning.rs  one_step_sarsa.rs
crates/reinforcement_learning/src/experience_buffer/: prioritized_experience_buffer.rs  random_experience_buffer.rs
crates/reinforcement_learning/src/model/: random_model.rs
crates/reinforcement_learning/src/network/: activation.rs  layers.rs  loss.rs
crates/reinforcement_learning/src/policy/: main_target_neural_policy.rs  neural_policy.rs  tabular_policy.rs
crates/reinforcement_learning/src/policy/neural_policy/: network.rs
crates/reinforcement_learning/src/trainer/: continuous_discrete_trainer.rs  continuous_observation_trainer.rs  discrete_discrete_trainer.rs  full_discrete_trainer.rs
crates/reinforcement_learning/src/utils/: patterns.rs  subscriber.rs
crates/samples/: Cargo.toml
crates/samples/src/: lib.rs
crates/utils/src/: lib.rs
src/: action_selection.rs  agent.rs  algorithms.rs  env.rs  lib.rs  main.rs  model.rs  network.rs  observation.rs  policy.rs  utils.rs
src/action_selection/: uniform_epsilon_greed.rs  upper_confidence_bound.rs
src/agent/: elegibility_traces_agent.rs  elegibility_traces_tabular_agent.rs  elegibility_traces_tabular_egreedy_agent.rs  expected_sarsa.rs  internal_model_agent.rs  one_step_agent.rs  one_step_tabular_agent.rs  one_step_tabular_double_agent.rs  one_step_tabular_egreedy_agent.rs  one_step_tabular_egreedy_double_agent.rs  one_step_tabular_ucb_agent.rs  qlearning.rs  sarsa.rs
src/algorithms/: action_selection.rs  policy_update.rs  qlearning.rs  sarsa.rs
src/algorithms/action_selection/: epsilon_greed.rs  uniform_epsilon_greed.rs  upper_confidence_bound.rs
src/algorithms/policy_update/: expected_sarsa_step.rs  one_step_expected_sarsa.rs  one_step_qlearning.rs  one_step_sarsa.rs  q_lambda.rs  q_step.rs  qlearning_lambda.rs  sarsa_lambda.rs  sarsa_step.rs
src/env/: action_space.rs  blackjack.rs  cart_pole.rs  cliff_walking.rs  frozen_lake.rs  frozen_lake_edited.rs  mountain_car.rs  observation.rs  taxi.rs
src/model/: random_model.rs
src/network/: activation.rs  layers.rs  loss.rs
src/policy/: basic_policy.rs  double_policy.rs  double_tabular_policy.rs  main_target_neural_policy.rs  neural_policy.rs  tabular_policy.rs  trace_policy.rs
