[package]
name = "reinforcement_learning"
description = "Reinforcement Learning in Rust"
authors = ["JohnVithor <thejohnvithor@gmail.com>"]
version = "0.0.1"
edition = "2021"
license = "MIT"
include = ["src/**/*"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxhash = "0.2.1"
structopt = "0.3.26"
rand = "0.8.5"
plotters = "0.3"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
kdam = "0.3.0"