[package]
name = "rust_drl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_drl"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.0"
reinforcement_learning = { path = "../reinforcement_learning" }
