[package]
name = "rust_drl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_drl"
crate-type = ["cdylib"]

[dependencies]
environments = { path = "../environments" }
reinforcement_learning = { path = "../reinforcement_learning" }
tch = { version = "0.15.0", features = ["python-extension"] }
torch-sys = { version = "0.15.0", features = ["python-extension"] }
pyo3 = { version = "0.20.3", features = ["extension-module"] }
numpy = "0.20"
rand = "0.8.5"