[package]
name = "reinforcement_learning"
description = "Reinforcement Learning in Rust"
authors = ["JohnVithor <thejohnvithor@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
include = ["src/**/*"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [profile.release]
# lto = true
# codegen-units = 1

[dependencies]
serde = "1.0"
environments = { path = "../environments" }
utils = { path = "../utils" }
rand = "0.8"
ndarray = "0.15"
ndarray-rand = "0.14"
tch = "0.15"

