[package]
name = "samples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reinforcement_learning = { path = "../reinforcement_learning" }
environments = { path = "../environments" }
structopt = "0.3"
ndarray = "0.15"
tch = "0.15"
